# DadJokeMicroservices

./: README.md
dad-joke-service/: .gitignore  Cargo.toml  build.rs  dadJokes.db
dad-joke-service/protos/: DadJokeService.proto
dad-joke-service/src/: main.rs
gateway/: pom.xml
gateway/src/main/java/com/ianj751/gateway/: GatewayApplication.java  SecurityConfig.java
gateway/src/main/java/com/ianj751/gateway/configuration/: ApplicationConfig.java  JwtAuthenticationFilter.java  JwtService.java  SecurityConfig.java
gateway/src/main/java/com/ianj751/gateway/controllers/: AuthController.java  DadJokeController.java
gateway/src/main/java/com/ianj751/gateway/models/: AuthRequest.java  AuthResponse.java  DadJokeDTO.java  Role.java  User.java
gateway/src/main/java/com/ianj751/gateway/repositories/: UserRepository.java
gateway/src/main/java/com/ianj751/gateway/services/: AuthenticationService.java
gateway/src/main/java/com/ianj751/gateway/stubs/: DadJokeClient.java
gateway/src/main/proto/: DadJokeService.proto
gateway/src/main/resources/: application.yml
gateway/src/test/java/com/ianj751/gateway/: GatewayApplicationTests.java
