[package]
name = "dad-joke-service"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.12" 
tonic = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

[build-dependencies]
tonic-build = "0.10"